Alignment for box__actions buttons. fix #2

--- a/src/less/3-components/_buttons.less
+++ b/src/less/3-components/_buttons.less
@@ -29,7 +29,6 @@ button {
 button,
 input[type="submit"] {
   display: inline-block;
-  margin: 0;
   padding: .5rem 1rem;
   border: none;
   border-radius: @btn-radius;
