--- a/src/less/5-modules/_box.less
+++ b/src/less/5-modules/_box.less
@@ -37,6 +37,11 @@
   flex: 0 1 auto;
 }
 
+.box__actions .pullRight > * {
+  margin-right: 0;
+  margin-left: 1rem;
+}
+
 .box__footer {
   border-top: 2px solid #f7f7f7;
 }
